# lakeflow_dicomweb_connector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml
notebooks/: dicomweb_pipeline.py
src/databricks/labs/community_connector/interface/: __init__.py  lakeflow_connect.py
src/databricks/labs/community_connector/libs/: spec_parser.py  utils.py
src/databricks/labs/community_connector/pipeline/: ingestion_pipeline.py
src/databricks/labs/community_connector/sources/dicomweb/: README.md  _generated_dicomweb_python_source.py  connector_spec.yaml  dicomweb.py  dicomweb_client.py  dicomweb_parser.py  dicomweb_schemas.py
src/databricks/labs/community_connector/sparkpds/: __init__.py  lakeflow_datasource.py  registry.py
tests/: conftest.py  test_dicomweb_client.py  test_dicomweb_connector.py  test_integration_variant.py
