[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-dicomweb"
version = "0.1.0"
description = "DICOMweb VNA/PACS connector for Lakeflow Community Connectors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "requests>=2.28.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["databricks*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
